packages/apps/spaces/components/organization/organization-details/organization-details.module.scss
@import '../../../styles/mixins';

.organizationDetails {
  display: flex;
  flex-direction: column;
  border-radius: 10px;
  margin-bottom: var(--spacing-xxl);
  box-shadow: 2px 2px 4px -2px rgba(0, 0, 50, 0.23),
    6px 6px 20px rgba(0, 0, 50, 0.1),
    -8px -8px 16px 2px hsla(200, 0%, 100%, 0.278);
  background-size: cover;
  background-repeat: no-repeat;
  position: relative;
  backdrop-filter: blur(10px);
  aspect-ratio: 3/2;
}

.bg {
  @include frosted-glass;
  background: radial-gradient(
    rgba(255, 255, 255, 0.7) 30%,
    rgba(255, 255, 255, 0.9)
  );
  min-height: available;
  backdrop-filter: blur(5px);
  box-shadow: none;
  padding: var(--spacing-md) var(--spacing-lg);
}

.name {
  font-size: var(--heading-main);
  font-weight: bold;
}

.industry {
  @include text-hint;
  text-transform: lowercase;
  letter-spacing: 1px;
  margin-top: -2px;
}

.description {
  font-size: var(--font-size-sm);
  margin: var(--spacing-xxs) 0;
}

.source {
  font-size: var(--font-size-xs);
  color: var(--text-faded);
  font-weight: lighter;

  & span {
    font-weight: bold;
    margin-right: var(--spacing-xxxs);
  }
}
.header {
  display: flex;
  justify-content: space-between;
}

